--- a/style.css
+++ b/style.css
@@ -1,7 +1,12 @@
+/* Center the demo */
+html, body { height: 100%; }
 body {
-      background-color: #000;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+  background: black;
+ 
 }
-
 .coin {      
       position: absolute;
       top: 4%;
@@ -9,7 +14,8 @@ body {
       width: 450px;
       height: 450px;
       border-radius: 80%;
-      background-image: linear-gradient(-20deg, #8a430f 15%,#e8b919 50%, #8a430f 86%);   
+      background-image: linear-gradient(-20deg, #8a430f 15%,#c46b17 50%, #8a430f 86%);  
+     
 }
 /*
 .coin:before {
@@ -30,8 +36,24 @@ body {
       z-index: -1;
       margin: -12px; 
       border-radius: 80%;
-      background: linear-gradient(to bottom, #f1cc3a, #d29826);
-    /*  box-shadow: 0px -1px 1px 1px white, 1px 1px 3px 1px black, inset 25px -14px 24px -16px red;*/
+      background: #f3cd44;   
+      border: 2px dashed black;
+      
+
+    
+}
+
+.coin-gab {
+  background-image: url(bitcoin.png);
+  background-position-x: center;
+  background-size: cover;
+  position: absolute;
+  top: -15px;
+  left: -15px;
+  width: 530px;
+  height: 530px;
+  border-radius: 80%;
+  z-index: -10;
 }
 
 .coin-message {
@@ -58,7 +80,7 @@ body {
       position: absolute;
       top: 0; left: 0;
       font-size: 0.8rem;
-      color: #f1cc3a;
+      color: #f3cd44;
       text-align: left;
       text-shadow: 1px 1px 0 #000;
       line-height: 0;
@@ -66,56 +88,28 @@ body {
       vertical-align: top;
 }
 
-.inner-way-1 {
-      position: absolute;
-      top: 9.5%;
-      left: 9%;
-      width: 81%;
-      height: 81%;
-      border: 1px solid yellow;
-      border-radius: 250px;   
+.outside {
+  position: absolute;
+
+  top: 0;
+	width: 70vmin;
+	height: 70vmin;
+  background: #f3cd44;
+  clip-path: polygon(28% 71%, 40% 72%, 40% 80%, 45% 81%, 45% 71%, 50% 71%, 50% 80%, 55% 80%, 55% 73%, 55% 72%, 61% 71%, 65% 69%, 69% 66%, 72% 62%, 73% 58%, 73% 55%, 72% 52%, 71% 51%, 67% 48%, 66% 47%, 69% 43%, 70% 40%, 69% 35%, 66% 31%, 58% 28%, 58% 29%, 58% 28%, 55% 28%, 55% 18%, 49% 18%, 49% 28%, 45% 28%, 45% 19%, 39% 18%, 39% 28%, 27% 29%, 26% 35%, 34% 35%, 35% 66%, 29% 65%);
 }
 
-.inner-way-2 {
-      position: absolute;
-      top: 11%;
-      left: 11%;
-      width: 77%;
-      height: 77%;
-      border: 1px solid yellow;
-      border-radius: 250px;   
+.outside:after {
+  content: '';
+  position: absolute;
+  top: 0; right: 0; bottom: 0; left: 0;
+      z-index: -1;
+
+      margin: 8px 13px;
+  background-image: linear-gradient(-20deg, #8a430f 15%,#c46b17 50%, #8a430f 86%);
+  clip-path: polygon(28% 71%, 40% 72%, 40% 80%, 45% 81%, 45% 71%, 50% 71%, 50% 80%, 55% 80%, 55% 73%, 55% 72%, 61% 71%, 65% 69%, 69% 66%, 72% 62%, 73% 58%, 73% 55%, 72% 52%, 71% 51%, 67% 48%, 66% 47%, 69% 43%, 70% 40%, 69% 35%, 66% 31%, 58% 28%, 58% 29%, 58% 28%, 55% 28%, 55% 18%, 49% 18%, 49% 28%, 45% 28%, 45% 19%, 39% 18%, 39% 28%, 27% 29%, 26% 35%, 34% 35%, 35% 66%, 29% 65%);
 }
 
 
-.inner-way-3 {
-      position: absolute;
-      top: 9.5%;
-      left: 9%;
-      width: 81%;
-      height: 81%;
-      border: 1px solid yellow;
-      border-radius: 250px;   
-}
-
-.inner-way-4 {
-      position: absolute;
-      top: 9.5%;
-      left: 9%;
-      width: 81%;
-      height: 81%;
-      border: 1px solid yellow;
-      border-radius: 250px;   
-}
-
-.inner-way-5 {
-      position: absolute;
-      top: 9.5%;
-      left: 9%;
-      width: 81%;
-      height: 81%;
-      border: 1px solid yellow;
-      border-radius: 250px;   
-}
 
 .dashed-border {
       position: relative;
@@ -131,7 +125,7 @@ body {
 
 .dashed-border span {     
       width: 25px;
-      background: yellow;
+      background: #f3cd44;
       height: 10px;     
       line-height: 530px;
       display:  none;
@@ -248,7 +242,7 @@ body {
     }
     .dashed-border span:nth-of-type(27) {
       display: block;
-      transform: rotate(-310deg) translateX(-20px) translateY(-360px);
+      transform: rotate(-310deg) translateX(2px) translateY(-365px);
     }
     .dashed-border span:nth-of-type(28)  {
       display: block;
